<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.ui.main.fragment.MainActivityFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfiguration"
        android:layout_width="@dimen/btn_circle_layout_width"
        android:layout_height="@dimen/btn_circle_layout_height"
        android:layout_marginTop="@dimen/btn_circle_layout_margin_top"
        android:layout_marginEnd="@dimen/btn_circle_layout_margin_end"
        android:contentDescription="@string/btn_configurations_content_description"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:src="@drawable/gear_solid"
        app:cornerRadius="@dimen/btn_play_layout_height"
        app:icon="@drawable/gear_solid"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/button_text" />

    <ImageView
        android:id="@+id/imgTitleIcon"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/img_title_background_content_description"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfiguration"
        app:tint="@color/icon_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtThemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/txt_theme_title"
        android:textColor="@color/text"
        android:textFontWeight="600"
        android:textSize="@dimen/txt_theme_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTitleIcon" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinnerTheme"
        android:layout_width="@dimen/spinner_theme_layout_width"
        android:layout_height="@dimen/spinner_layout_height"
        android:layout_marginTop="6dp"
        android:text="@string/placeholder"
        android:textColor="@color/spinner_text"
        android:textFontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtThemeTitle"
        app:ms_arrow_tint="@color/spinner_arrow"
        app:ms_background_color="@color/spinner_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/btn_play_layout_width"
        android:layout_height="@dimen/btn_play_layout_height"
        android:layout_marginTop="12dp"
        android:text="@string/btn_play"
        android:textColor="@color/button_text"
        android:textFontWeight="700"
        android:textSize="@dimen/btn_play_text_size"
        app:cornerRadius="@dimen/btn_play_layout_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTheme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_play_layout_height"
        android:layout_marginTop="45dp"
        android:paddingLeft="51dp"
        android:paddingRight="51dp"
        android:text="@string/btn_create_game"
        android:textColor="@color/button"
        android:textFontWeight="700"
        android:textSize="@dimen/btn_play_text_size"
        app:cornerRadius="@dimen/btn_play_layout_height"
        app:icon="@drawable/_11877_plus_round_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>